--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "type": "module",
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.2",
-    "codemirror": "^6.0.1"
+    "codemirror": "^6.0.1",
+    "svelte-markdown": "^0.4.1"
   }
 }
