--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.2",
     "codemirror": "^6.0.1",
+    "fabric": "^6.3.0",
     "svelte-markdown": "^0.4.1"
   }
 }
