--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.2",
     "codemirror": "^6.0.1",
+    "eslint4b-prebuilt": "^6.7.2",
     "fabric": "^6.3.0",
     "svelte-markdown": "^0.4.1"
   }
